--- a/WebContent/conseiller.html
+++ b/WebContent/conseiller.html
@@ -33,7 +33,7 @@ xhttp.onreadystatechange = function(){
 		myCallBack(this);
 	}
 }
-xhttp.open("GET", "http://localhost/Proxibanque-v2/listeClient.json", true);
+xhttp.open("GET", "listeClient.json", true);
 xhttp.send();
 	}
 	
@@ -45,7 +45,7 @@ xhttp.send();
 <body>
 
 
-<h1> Espace conseiller</h1>
+<h1> Espace conseiller bla bla bla</h1>
 
 <div>	
 	
