--- a/WebContent/conseiller.html
+++ b/WebContent/conseiller.html
@@ -18,6 +18,8 @@ let myCallBack = function (reponse){
 		    "</td><td>" +
 		    item.numero +
 		    "</td></tr>";
+		    item.nom +
+		    "</td></tr>";
 		}
 		let elementDiv = document.getElementById("divResultat");
 		elementDiv.innerHTML = table;
